--- a/DataWrangling.ipynb
+++ b/DataWrangling.ipynb
@@ -310,125 +310,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>UnitPrice</th>\n",
-       "      <th>LineTotal</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>120</td>\n",
-       "      <td>120</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>34</td>\n",
-       "      <td>34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>121312</th>\n",
-       "      <td>3578</td>\n",
-       "      <td>3578</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>121313</th>\n",
-       "      <td>3399</td>\n",
-       "      <td>3399</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>121314</th>\n",
-       "      <td>3399</td>\n",
-       "      <td>3399</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>121315</th>\n",
-       "      <td>699</td>\n",
-       "      <td>699</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>121316</th>\n",
-       "      <td>3399</td>\n",
-       "      <td>3399</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>121317 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        UnitPrice  LineTotal\n",
-       "0             120        120\n",
-       "1               8          8\n",
-       "2               7          7\n",
-       "3               7          7\n",
-       "4              34         34\n",
-       "...           ...        ...\n",
-       "121312       3578       3578\n",
-       "121313       3399       3399\n",
-       "121314       3399       3399\n",
-       "121315        699        699\n",
-       "121316       3399       3399\n",
-       "\n",
-       "[121317 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#change snowflake dtypes to match sql_df\n",
-    "snowflake_df[['UnitPrice', 'LineTotal']] = snowflake_df[['UnitPrice', 'LineTotal']].astype('int64')"
+    "snowflake_df[['UnitPrice', 'LineTotal']] = snowflake_df[['UnitPrice', 'LineTotal']].astype('float64')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -444,19 +336,14 @@
        "dtype: object"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "snowflake_df.dtypes"
+   ]
   }
  ],
  "metadata": {
